--- a/project_extension/alexnet_on_STL10/debug_trans_learnt.ipynb
+++ b/project_extension/alexnet_on_STL10/debug_trans_learnt.ipynb
@@ -28,17 +28,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Files already downloaded and verified\nworking for fold number : 0 \n\nstarting untargeted attack\nCompleted untargeted attack !\nstarting targeted attack ...\nCompleted untargeted attack !\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# coding: utf-8\n",
@@ -205,35 +199,28 @@
     "# \t\t\t\tresume_path=MODEL, parallel=False)\n",
     "\n",
     "# model = model.model\n",
-    "# model.eval()\n",
     "\n",
     "\n",
+    "# important before starting inferencing\n",
+    "#model.eval()\n",
     "\n",
-    "import torchvision.models as models\n",
+    "\n",
     "\n",
     "# resnet18 = models.resnet18(pretrained=True)\n",
     "# vgg16 = models.vgg16(pretrained=True)\n",
     "\n",
     "\n",
-    "alexnet = models.alexnet(pretrained=True)\n",
-    "# squeezenet = models.squeezenet1_0(pretrained=True)\n",
-    "# densenet = models.densenet161(pretrained=True)\n",
-    "# inception = models.inception_v3(pretrained=True)\n",
-    "# googlenet = models.googlenet(pretrained=True)\n",
-    "# shufflenet = models.shufflenet_v2_x1_0(pretrained=True)\n",
-    "# mobilenet = models.mobilenet_v2(pretrained=True)\n",
-    "# resnext50_32x4d = models.resnext50_32x4d(pretrained=True)\n",
-    "# wide_resnet50_2 = models.wide_resnet50_2(pretrained=True)\n",
-    "# mnasnet = models.mnasnet1_0(pretrained=True)\n",
-    "\n",
-    "model = alexnet\n",
-    "\n",
+    "# pick from transfer_learnt model\n",
+    "model = torch.load(\"saved_alexnet_transfer_learnt_10classes.pth\")\n",
+    "# important before starting inferencing\n",
+    "model.eval()\n",
     "\n",
     "####################################\n",
     "# load data\n",
     "####################################\n",
     "batch_size = 200\n",
     "num_folds = 0\n",
+    "\n",
     "\n",
     "transform=transforms.Compose([\n",
     "                    transforms.Pad(4),\n",
@@ -310,52 +297,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([794, 227, 346, 483, 340, 478, 273, 296, 830, 403, 403, 176, 458, 534,\n        280, 354, 884, 353, 561, 688, 815, 138, 353, 609,  12, 628, 273,  55,\n        250, 365, 517, 922, 857,  87, 669, 612, 423, 847, 272, 700, 559, 354,\n        131, 728, 256, 372, 281, 517, 339, 373, 652, 170, 510, 847, 386, 794,\n        163, 690, 592, 495, 866, 792, 727, 163, 380, 277, 799, 792, 713, 724,\n        727, 713, 170, 555, 621, 587, 532, 373, 516, 438, 883, 845, 751,  73,\n        586, 538, 652, 178, 668, 287, 286, 860, 354, 921, 354, 794, 587, 406,\n        908, 285, 847, 652,  58, 760, 478, 549, 845, 343, 847, 385, 336, 898,\n        568, 209,  11, 871, 274, 211, 555, 868, 406, 873, 178, 286, 404, 478,\n        955, 825, 568, 364, 730, 351, 480, 291, 127, 350, 286, 273, 352, 713,\n        478, 270, 847, 415, 492, 408, 557, 690,  23, 634, 798, 586, 549, 269,\n        404, 438, 921, 176, 510, 350, 408, 495, 343, 498, 847, 562, 898, 373,\n        226, 257, 236, 351, 287, 132, 385, 519,  13, 664, 586, 299, 510, 351,\n        815, 517, 353, 894, 481, 372, 556, 353, 352, 288, 343, 313, 286, 652,\n         85, 454, 794, 178])"
+      "text/plain": "[0,\n 3,\n 5,\n 7,\n 8,\n 9,\n 10,\n 11,\n 13,\n 14,\n 15,\n 17,\n 18,\n 19,\n 20,\n 21,\n 22,\n 23,\n 24,\n 25,\n 26,\n 27,\n 28,\n 29,\n 30,\n 31,\n 32,\n 34,\n 35,\n 36,\n 37,\n 38,\n 39,\n 41,\n 42,\n 43,\n 44,\n 45,\n 46,\n 47,\n 48,\n 49,\n 50,\n 51,\n 52,\n 53,\n 54,\n 57,\n 59,\n 60,\n 62,\n 63,\n 64,\n 65,\n 66,\n 67,\n 68,\n 69,\n 70,\n 72,\n 74,\n 77,\n 78,\n 79,\n 80,\n 82,\n 83,\n 84,\n 86,\n 87,\n 88,\n 89,\n 90,\n 91,\n 92,\n 93,\n 94,\n 96,\n 97,\n 98,\n 100,\n 101,\n 102,\n 103,\n 104,\n 105,\n 106,\n 107,\n 108,\n 111,\n 113,\n 114,\n 115,\n 116,\n 122,\n 123,\n 124,\n 125,\n 127,\n 128,\n 130,\n 131,\n 132,\n 134,\n 136,\n 138,\n 140,\n 142,\n 144,\n 145,\n 146,\n 147,\n 148,\n 150,\n 151,\n 152,\n 153,\n 154,\n 155,\n 156,\n 157,\n 158,\n 159,\n 160,\n 161,\n 162,\n 163,\n 166,\n 167,\n 168,\n 169,\n 170,\n 171,\n 172,\n 174,\n 175,\n 176,\n 178,\n 179,\n 180,\n 181,\n 182,\n 183,\n 184,\n 185,\n 186,\n 187,\n 188,\n 189,\n 191,\n 193,\n 194,\n 195,\n 196,\n 197,\n 198,\n 199]"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "source": [
     "cln_data, true_label = next(iter(testloader))\n",
+    "cln_data, true_label\n",
     "\n",
     "_, pred_cln_ = torch.max(model(cln_data), 1)\n",
     "\n",
-    "cln_data\n",
+    "torch.sum(pred_cln_ == true_label) * 100.0 / cln_data.shape[0]\n",
     "\n",
-    "pred_cln_"
+    "compare_prediction_label = (pred_cln_ == true_label)\n",
+    "\n",
+    "good_samples = [i for i, x in enumerate(compare_prediction_label) if x == True]\n",
+    "good_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "AlexNet(\n  (features): Sequential(\n    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n    (1): ReLU(inplace=True)\n    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n    (4): ReLU(inplace=True)\n    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n    (7): ReLU(inplace=True)\n    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n    (9): ReLU(inplace=True)\n    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n    (11): ReLU(inplace=True)\n    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n  )\n  (avgpool): AdaptiveAvgPool2d(output_size=(6, 6))\n  (classifier): Sequential(\n    (0): Dropout(p=0.5, inplace=False)\n    (1): Linear(in_features=9216, out_features=4096, bias=True)\n    (2): ReLU(inplace=True)\n    (3): Dropout(p=0.5, inplace=False)\n    (4): Linear(in_features=4096, out_features=4096, bias=True)\n    (5): ReLU(inplace=True)\n    (6): Linear(in_features=4096, out_features=1000, bias=True)\n  )\n)"
-     },
-     "metadata": {},
-     "execution_count": 17
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "working for fold number : 3 \n\nstarting untargeted attack\nCompleted untargeted attack !\nstarting targeted attack ...\nCompleted untargeted attack !\n"
     }
    ],
    "source": [
-    "alexnet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "num_folds = 0\n",
+    "show_samples = [] \n",
     "\n",
     "for cln_data, true_label in testloader:\n",
     "\n",
@@ -365,7 +348,9 @@
     "\ttrue = np.concatenate((true, true_label.cpu().numpy().astype(int)), axis=None)\n",
     "\t\n",
     "\t_, pred_cln_ = torch.max(model(cln_data), 1)\n",
-    "\tpred_cln = np.concatenate((pred_cln, pred_cln_.cpu().numpy().astype(int)), axis=None)    \n",
+    "\tpred_cln = np.concatenate((pred_cln, pred_cln_.cpu().numpy().astype(int)), axis=None) \n",
+    "\n",
+    "\t\t#compare_prediction_label = ()\n",
     "\t\n",
     "\t####################################\n",
     "\t#Perform untargeted attack\n",
@@ -411,7 +396,8 @@
     "\tfold += 1\n",
     "\tif(fold > num_folds):\n",
     "\t\tbreak\n",
-    "\t"
+    "\n",
+    "# %%\n"
    ]
   },
   {
@@ -419,15 +405,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\t\n",
+    "\t\t\n",
     "####################################\n",
     "# Visualization of attacks\n",
     "####################################\n",
@@ -437,18 +416,18 @@
     "acc_cln = 100*np.mean(true == pred_cln)\n",
     "\n",
     "print('Total Accuracy: ',\"Unattacked: \", acc_cln, \n",
-    "\t  '\\t and during attack: ',FOLDER,'\\t',\n",
-    "\t  \n",
-    "\t  \"Untargeted attack: \",acc_adv_untargeted,\n",
-    "\t  \"\\tTargeted attack: \",acc_adv_targeted,\n",
+    "\t\t'\\t and during attack: ',FOLDER,'\\t',\n",
+    "\t\t\n",
+    "\t\t\"Untargeted attack: \",acc_adv_untargeted,\n",
+    "\t\t\"\\tTargeted attack: \",acc_adv_targeted,\n",
     "\t file=open(filetxt, \"a\"))\n",
     "\n",
     "correct_pred_indx = (true == pred_cln)\n",
     "acc_adv_untargeted = 100*np.mean(true[correct_pred_indx] == pred_untargeted_adv[correct_pred_indx])\n",
     "acc_adv_targeted = 100*np.mean(true[correct_pred_indx] == pred_targeted_adv[correct_pred_indx])\n",
     "print('Effect of attack on accurately predcited image by unattacked model:\\t'      \n",
-    "\t  \"Untargeted attack: \",acc_adv_untargeted,\n",
-    "\t  \"\\tTargeted attack: \",acc_adv_targeted,\n",
+    "\t\t\"Untargeted attack: \",acc_adv_untargeted,\n",
+    "\t\t\"\\tTargeted attack: \",acc_adv_targeted,\n",
     "\t file=open(filetxt, \"a\"))\n",
     "\n",
     "DCT_untargeted = (DCT_untargeted/len(true))\n",
@@ -493,13 +472,13 @@
     "\t file=open(filetxt, \"a\"))\n",
     "\n",
     "print(\"Total mean MMD: \", np.mean(MMD_untargeted), \n",
-    "\t  np.mean(MMD_targeted),\n",
+    "\t\tnp.mean(MMD_targeted),\n",
     "\t file=open(filetxt, \"a\"))\n",
     "print(\"Correct mean MMD: \", np.mean(MMD_untargeted[c_indx_untargeted]), \n",
-    "\t  np.mean(MMD_targeted[c_indx_targeted]),\n",
+    "\t\tnp.mean(MMD_targeted[c_indx_targeted]),\n",
     "\t file=open(filetxt, \"a\"))\n",
     "print(\"wrong mean MMD: \", np.mean(MMD_untargeted[w_indx_untargeted == 0]), \n",
-    "\t  np.mean(MMD_targeted[w_indx_targeted == 0]),\n",
+    "\t\tnp.mean(MMD_targeted[w_indx_targeted == 0]),\n",
     "\t file=open(filetxt, \"a\"))\n",
     "\n",
     "fig, ax = plt.subplots(1,1,figsize=(6, 6))\n",
@@ -531,65 +510,23 @@
     "\tadv_targeted = adv_targeted.cpu()\n",
     "\t\n",
     "\n",
-    "\n",
-    "# %%\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "794\n177\n955\n975\n539\n865\n273\n354\n"
-    }
-   ],
-   "source": [
-    "for ii in range(num_plots):\n",
-    "    \n",
-    "    print(pred_cln[ii])\n",
-    "\n",
-    "_imshow(cln_data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m&lt;ipython-input-3-890e57e85484&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_plots\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mii\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0m_imshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcln_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----&gt; 6\u001b[0;31m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m&quot;clean \\n pred: {}&quot;\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclasses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpred_cln\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_plots\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mii\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnum_plots\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0m_imshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madv_untargeted\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
     "plt.figure(figsize=(10, 8))\n",
     "num_plots = 8\n",
     "for ii in range(num_plots):\n",
+    "\tjj = good_samples[ii]  \n",
     "\tplt.subplot(3, num_plots, ii + 1)\n",
     "\t_imshow(cln_data[ii])\n",
-    "\tplt.title(\"clean \\n pred: {}\".format(classes[pred_cln[ii]]))\n",
+    "\tplt.title(\"clean \\n pred: {}\".format(classes[pred_cln[jj]]))\n",
     "\tplt.subplot(3, num_plots, ii + 1 + num_plots)\n",
     "\t_imshow(adv_untargeted[ii])\n",
-    "\tplt.title(\"untargeted \\n adv \\n pred: {}\".format(classes[pred_untargeted_adv[ii]]))\n",
+    "\tplt.title(\"untargeted \\n adv \\n pred: {}\".format(classes[pred_untargeted_adv[jj]]))\n",
     "\tplt.subplot(3, num_plots, ii + 1 + num_plots * 2)\n",
     "\t_imshow(adv_targeted[ii])\n",
-    "\tplt.title(\"target cat \\n adv \\n pred: {}\".format(classes[pred_targeted_adv[ii]]))\n",
+    "\tplt.title(\"target cat \\n adv \\n pred: {}\".format(classes[pred_targeted_adv[jj]]))\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(FOLDER+'test.png')\n"
+    "plt.savefig(FOLDER+'test.png')\n",
+    "\n"
    ]
   },
   {
